--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="functions.js"></script>
-
 </head>
 <body>
+
+    <div id="btn-container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>  
+
+
 </body>
+
+<script src="functions.js"></script>
 </html>
